fixed spacing on chrome and also fixed arbitrary code execution vuln

--- a/css/layout.css
+++ b/css/layout.css
@@ -92,7 +92,7 @@ p {
 
 
 #newThread {
-    line-height: 1;
+    line-height: 1.5;
     overflow: hidden;
     margin: 0 auto;
     margin-bottom: 4%;
